# meincraft

./: CMakeLists.txt  README.md
entt/: entt.hpp
ext/: glad.c  stb_image.h
ext/FastNoiseLite/: FastNoiseLite.h
ext/glad/include/glad/: glad.h
ext/glm/: glm.hpp
ext/glm/detail/: type_half.inl
ext/glm/ext/: matrix_clip_space.hpp  matrix_transform.hpp  quaternion_common.hpp
ext/glm/gtc/: quaternion.hpp
src/: ArrayFragment.glsl  ArrayVertex.glsl  Biome.cpp  Biome.h  Block.cpp  Block.h  BlockPool.cpp  BlockPool.h  Chunk.h  ChunkGenerator.cpp  ChunkGenerator.h  ChunkLoaderSystem.cpp  ChunkLoaderSystem.h  ChunkMeshingSystem.cpp  ChunkMeshingSystem.h  Components.h  InputSystem.cpp  InputSystem.h  Player.cpp  Player.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Texture.cpp  Texture.h  World.cpp  World.h  block.cpp  block.h  camera.h  chunk.cpp  chunk.h  components.h  debug.h  entity.cpp  entity.h  inputsystem.cpp  inputsystem.h  main.cpp  mesh.cpp  (+9 more)
